--- a/django/app/project/.env
+++ b/django/app/project/.env
@@ -1,10 +1,12 @@
 DEBUG=True
 SECRET_KEY=django-insecure-h8i6w6!yj$e4%x_5kp$-@1wmzzb4z7gzejs&6^md9p=^b0e-g9
+ALLOWED_HOSTS=localhost,127.0.0.1,ker51.pomfont.fr
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5433
 POSTGRES_DB=geodjango
 POSTGRES_USER=django
 POSTGRES_PASSWORD=mysupersecretpassword
 STATIC_URL=/static/
+STATIC_ROOT=/static/
 MEDIA_ROOT=media/
 MEDIA_URL=/media/
