deal with media files

--- a/docker-compose.rancher.yml
+++ b/docker-compose.rancher.yml
@@ -12,7 +12,7 @@ secrets:
 
 services:
   database:
-    image: mopnaej/ker51db:latest
+    image: mopnaej/ker51db:1.0
     build: ./database
     environment:
       - POSTGRES_PASSWORD_FILE=/run/secrets/pg_postgres_password
@@ -25,7 +25,7 @@ services:
     restart: always
 
   django:
-    image: mopnaej/ker51webapp:latest
+    image: mopnaej/ker51webapp:1.0
     build: ./django
 #    command: ["sleep","10000"]
 #    ports:
@@ -45,7 +45,7 @@ services:
 
   nginx:
 #    image: nginx:alpine
-    image: mopnaej/ker51nginx:latest
+    image: mopnaej/ker51nginx:1.0
     build: ./nginx
 #    ports:
 #      - 80:80
